Update 02-wrangling.Rmd rewording data frame definition
Co-authored-by: Tiffany A. Timbers <tiffany.timbers@gmail.com>

--- a/02-wrangling.Rmd
+++ b/02-wrangling.Rmd
@@ -109,7 +109,7 @@ Table: (\#tab:datastructure-table) Basic data structures in R
 | Data Structure | Description |
 |------|------------------|
 | vector | A set of values of the *same data type* (e.g. all values are numeric). A vector can be used to represent a single variable  | 
-| data frame | A set of *vectors* of the *same length*. A data frame can be used to represent a data set. | 
+| data frame | A list of *vectors* of the *same length*, which has column and row names. We typically use a data frame to represent a data set. | 
 | list | An ordered collection of one, or more, values. The elements in the list can be of different data types. | 
 
 > There are other data structures, such as *matrices*, which will not be covered in this book. 
