Update 02-wrangling.Rmd changing learning objective
Co-authored-by: Tiffany A. Timbers <tiffany.timbers@gmail.com>

--- a/02-wrangling.Rmd
+++ b/02-wrangling.Rmd
@@ -9,7 +9,8 @@ By the end of the chapter, students will be able to:
 
 * define the term "tidy data"
 * discuss the advantages and disadvantages of storing data in a tidy data format
-* contrast the basic data types and structures in R
+* define what vector and data frames are in R, and describe how they relate to each other
+* describe the types of data that can be stored in integer, double, character, logical, and factor vectors in R
 * recall and use the following tidyverse functions and operators for their intended data wrangling tasks:
     - `select`
     - `filter`
