Update 02-wrangling.Rmd rewording opening paragraph
Co-authored-by: Tiffany A. Timbers <tiffany.timbers@gmail.com>

--- a/02-wrangling.Rmd
+++ b/02-wrangling.Rmd
@@ -2,7 +2,11 @@
 
 ## Overview 
 
-This chapter will be centred around tools for cleaning and wrangling data that move data from its raw format into a suitable format for data analysis. They will be presented in the context of a real-world data science application, providing more practice working through a whole case study.
+This chapter will be centred around defining tidy data, 
+a data format that is suitable analysis, 
+and the tools needed to transform raw data into this format.
+This will be presented in the context of a real-world data science application, 
+providing more practice working through a whole case study.
 
 ## Chapter learning objectives
 By the end of the chapter, students will be able to:
