--- a/02-wrangling.Rmd
+++ b/02-wrangling.Rmd
@@ -113,7 +113,7 @@ Table: (\#tab:datastructure-table) Basic data structures in R
 
 | Data Structure | Description |
 |------|------------------|
-| vector | A set of values of the *same data type* (e.g. all values are numeric). A vector can be used to represent a single variable  | 
+| vector | An ordered collection of one, or more, values of the *same data type* (e.g. all values are numeric). *Note: in R, a vector of length one is used to represent a single value.*  | 
 | data frame | A list of *vectors* of the *same length*, which has column and row names. We typically use a data frame to represent a data set. | 
 | list | An ordered collection of one, or more, values. The elements in the list can be of different data types. | 
 
