Update 02-wrangling.Rmd rewording data structures note
Co-authored-by: Tiffany A. Timbers <tiffany.timbers@gmail.com>

--- a/02-wrangling.Rmd
+++ b/02-wrangling.Rmd
@@ -121,7 +121,7 @@ Table: (\#tab:datastructure-table) Basic data structures in R
 | data frame | A list of *vectors* of the *same length*, which has column and row names. We typically use a data frame to represent a data set. | 
 | list | An ordered collection of one, or more, values. The elements in the list can be of different data types. | 
 
-> There are other data structures, such as *matrices*, which will not be covered in this book. 
+> There are several other data structures in the R programming language (*e.g.,* matrices), however, they are beyond the scope of this book.
 
 ## Tidy Data
 
