--- a/02-wrangling.Rmd
+++ b/02-wrangling.Rmd
@@ -125,7 +125,13 @@ Table: (\#tab:datastructure-table) Basic data structures in R
 
 ## Tidy Data
 
-There are many ways a spreadsheet-like data set can be organized. This chapter will focus on the *tidy data* format of organization and how to make your raw (and likely messy) data tidy. We want to tidy our data because various tools we would like to use in R are designed to work most effectively (and efficiently) with tidy data. 
+There are many ways a spreadsheet-like data set can be organized. 
+This chapter will focus on introducing the *tidy data* format of organization 
+and how to make your raw (and likely messy) data tidy. 
+We want to tidy our data because that format maps onto 
+the statistical questions we are asking, 
+and because most of the tools for data analysis in R have been designed 
+to work most effectively (and efficiently) with tidy data.
 
 
 ### What is tidy data?
