adding references as per Tiffany's feedback, adding sentence about naming objects in R

--- a/index.Rmd
+++ b/index.Rmd
@@ -49,7 +49,7 @@ This textbook aims to be an approachable introduction to the world of data scien
 (2) identify and solve common problems in data science. 
 
 The book is structured, so learners spend the first four chapters learning how to use the R programming language to load, wrangle, clean, and visualize data while answering descriptive and exploratory data analysis questions. The next six chapters illustrate how to answer
-predictive, exploratory and inferential data analysis questions with common methods in data science, including classification, regression, clustering and estimation. In the final chapters (\@ref(getting-started-with-jupyter) - \@ref(setting-up-your-own-computer)), we discuss how to use Jupyter to edit and write R code, how to use version control for collaboration, and how to install and configure the software needed for data science on your own computer. Readers may want to refer to these chapters earlier as they start exploring the examples and exercises in this book. Figure \@ref(fig:img-chapter-overview) summarizes a data science pipeline and what you will learn in each chapter of this book.
+predictive, exploratory and inferential data analysis questions with common methods in data science, including classification, regression, clustering and estimation. In the final chapters (\@ref(getting-started-with-jupyter) - \@ref(setting-up-your-own-computer)), we discuss how to use Jupyter to edit and write R code (a programming language for data analysis [@Rlanguage]), how to use version control for collaboration, and how to install and configure the software needed for data science on your own computer. Readers may want to refer to these chapters earlier as they start exploring the examples and exercises in this book. Figure \@ref(fig:img-chapter-overview) summarizes a data science pipeline and what you will learn in each chapter of this book.
 
 ```{r img-chapter-overview, echo = FALSE, message = FALSE, warning = FALSE, fig.cap = "Where are we going?", out.width="1050", fig.retina = 2}
 knitr::include_graphics("img/chapter_overview.jpeg")
@@ -59,7 +59,7 @@ The four common data science methods that are useful for answering predictive an
 
 1. **Classification: predicting a class/category for a new observation.** This could answer a question such as whether a tumour is cancerous or benign given some tumour cell measurements?
 
-2. **Regression: predicting a quantitative value for a new observation.** This could answer a question such as what will be the 10 km race time for 20-year-old woman, with a BMI of 25 who trains 4 times a week?
+2. **Regression: predicting a quantitative value for a new observation.** This could answer a question such as what will be the 10 km race time for a 20-year-old woman with a BMI of 25 who trains four times a week?
 
 3. **Clustering: finding previously unknown/unlabelled subgroups in a dataset**. This could answer a question such as what products commonly bought together on Amazon?
 
@@ -108,7 +108,7 @@ The first kind of data file that we will learn how to load into R (as a data fra
 spreadsheet-like *comma-separated values* format (`.csv` for short).
 These files have names ending in `.csv`, and can be opened and saved using common spreadsheet programs like Microsoft Excel and Google Sheets. 
 For example, a `.csv` file named `can_lang.csv` [is included with the code for this book](https://github.com/UBC-DSCI/introduction-to-datascience/blob/master/data/can_lang.csv). 
-This file--- originally from [{canlang} R data package](https://ttimbers.github.io/canlang/)---has language data collected in the 2016 Canadian census [@cancensus2016]. 
+This file--- originally from [{canlang} R data package](https://ttimbers.github.io/canlang/) [@timbers2020canlang] ---has language data collected in the 2016 Canadian census [@cancensus2016]. 
 If we were to open this data in a plain text editor, we would see each row on its own line, and each entry in the table separated by a comma:
 
 ```{bash, echo=FALSE, comment=NA}
@@ -132,7 +132,7 @@ installation of R, we will have to load it from somewhere else before we can use
 it. The place we will load it from is an R package. An R package is a collection
 of functions that once loaded, can be used in addition to the built-in R package
 functions. The `read_csv` function, in particular, can be made accessible 
-through loading the `tidyverse` package (more on this later), using the 
+through loading the `tidyverse` package [@wickham2019tidverse] (more on this later), using the 
 `library` function.
 
 After loading the `tidyverse` package, we can call the `read_csv` function and 
@@ -148,7 +148,7 @@ read_csv("data/can_lang.csv")
 > We use the `read_csv` function from the `tidyverse` instead of the base R function `read.csv` because it's faster, and it creates a nicer variant of the base R data frame called a *tibble*. 
 > This has several benefits that we'll discuss in further detail later in the course.
 
-## Giving a data frame a name
+## Naming things in R
 
 When we loaded the language data collected in the 2016 Canadian census 
 above using `read_csv`, we did not give this data frame a name. 
@@ -168,6 +168,14 @@ with quotes like the file name
 because we are formally telling R about this new word and giving it a value. 
 Only characters and words that act as values (on `<-`'s right-hand side) 
 need to be surrounded by quotes.
+
+
+There are certain conventions for naming objects in R. 
+Object names should consist of letters, numbers and underscores `_` to separate words within a name.
+It would help if you also tried to give your objects meaningful names.
+For instance, you *can* name a plot `x`. 
+However, using more meaningful terms, such as `canlang_plot`, will help you remember what each name represents. 
+We recommend following the Tidyverse naming conventions outlined in the [Tidyverse Style Guide](https://principles.tidyverse.org/names-attribute.html#universal-names) [@tidyversestyleguide]. 
 
 Let's now use the assignment symbol to give the name `can_lang` 
 to the 2016 Canadian census language data frame that we get from `read_csv`. 
