added figure captions up to the collaboration section

--- a/12-version_control.Rmd
+++ b/12-version_control.Rmd
@@ -328,7 +328,7 @@ the repository.
 
 The pen tool can be used to edit existing plain text files. When you click on 
 the pen tool the file will be opened in a text box where you can use your 
-keyboard to make changes.
+keyboard to make changes (Figure \@ref(fig:pen-tool-01) & \@ref(fig:pen-tool-02)).
 
 ```{r pen-tool-01, fig.cap = 'Clicking on the pen tool opens a textbox for editing plain text files.', fig.retina = 2}
 image_read("img/version_control/pen-tool_01.png") %>%
@@ -349,19 +349,20 @@ changes. When you *commit a file* in a repository, the version control system
 takes a snapshot of what the file looks like. As you continue working on the 
 project, over time you will possibly make many commits to a single file; this 
 generates a useful version history for that file. On GitHub, if you click the 
-green "Commit changes" button, it will save the file and then make a commit.
+green "Commit changes" button, it will save the file and then make a commit
+(Figure \@ref(fig:pen-tool-03)).
 
 ```{r pen-tool-03, fig.cap = 'Saving changes using the pen tool requires committing those changes, and an associated commit message.', fig.retina = 2}
 image_read("img/version_control/pen-tool_03.png") %>%
   image_crop("3583x1500+1+500")
 ```
 
-
 ### The "Add file" menu
 
 The "Add file" menu can be used to create new plain text files and upload files 
 from your computer. To create a new plain text file, click the "Add file" drop 
-down menu and select the "Create new file" option:
+down menu and select the "Create new file" option 
+(Figure \@ref(fig:create-new-file-01)).
 
 ```{r create-new-file-01, fig.cap = 'New plain text files can be created directly on GitHub.', fig.retina = 2}
 image_read("img/version_control/create-new-file_01.png") %>%
@@ -373,7 +374,8 @@ image_read("img/version_control/create-new-file_01.png") %>%
 A page will open with a small text box for the file name to be entered, and a 
 larger text box where the desired file content text can be entered. Note the two 
 tabs, "Edit new file" and "Preview". Toggling between them lets you enter and 
-edit text and view what the text will look like when rendered, respectively. 
+edit text and view what the text will look like when rendered, respectively
+(Figure \@ref(fig:create-new-file-02)). 
 Note that GitHub understands and renders `.md` files using a 
 [markdown syntax](https://guides.github.com/pdfs/markdown-cheatsheet-online.pdf) 
 very similar to Jupyter notebooks, so the "Preview" tab is especially helpful 
@@ -387,7 +389,7 @@ image_read("img/version_control/create-new-file_02.png") %>%
 ```
 
 Save and commit your changes by click the green "Commit changes" button at the 
-bottom of the page.
+bottom of the page (Figure \@ref(fig:create-new-file-03)).
 
 ```{r create-new-file-03, fig.cap = 'To be saved, newly created files are required to be committed along with an associated commit message.', fig.retina = 2}
 image_read("img/version_control/create-new-file_03.png") %>%
@@ -395,7 +397,8 @@ image_read("img/version_control/create-new-file_03.png") %>%
 ```
 
 You can also upload files that you have created on your local machine by using 
-the "Add file" drop down menu and selecting "Upload files":
+the "Add file" drop down menu and selecting "Upload files"
+(Figure \@ref(fig:upload-files-01)).
 
 ```{r upload-files-01, fig.cap = 'New files of any type can be uploaded to GitHub.', fig.retina = 2}
 image_read("img/version_control/upload-files_01.png") %>%
@@ -408,7 +411,7 @@ To select the files from your local computer to upload, you can either drag and
 drop them into the grey box area shown below, or click the "choose your files" 
 link to access a file browser dialog. Once the files you want to upload have 
 been selected, click the green "Commit changes" button at the bottom of the 
-page.
+page (Figure \@ref(fig:upload-files-02)).
 
 ```{r upload-files-02, fig.cap = 'Uploaded files can specified by dragging them into the GitHub website where specified (red circle) or by clicking on the "choose your files" to select them via a file browser. Uploaded files are also required to be committed along with an associated commit message.', fig.retina = 2}
 image_read("img/version_control/upload-files_02.png") %>%
@@ -438,14 +441,15 @@ JupyterHub.
 We need to *clone* our project's Git repository to our JupyterHub---i.e., make a 
 copy that knows where it was obtained from so that it knows where send/receive 
 new committed edits. In order to do this, first copy the URL from the HTTPS tab 
-of the Code drop down menu on GitHub:
+of the Code drop down menu on GitHub (Figure \@ref(fig:clone-02)).
 
 ```{r clone-02, fig.cap = 'The remote address (URL) corresponding to the location of the GitHub repository needed to clone it to a computer can be found under the green "Code" button.', fig.retina = 2}
 image_read("img/version_control/clone_02.png") %>%
   image_crop("3584x1500")
 ```
 
-Then open JupyterHub, and click the Git+ icon on the file browser tab:
+Then open JupyterHub, and click the Git+ icon on the file browser tab 
+(Figure \@ref(fig:clone-01)).
 
 ```{r clone-01, fig.cap = 'The Jupyter Git Clone icon (red circle)', fig.retina = 2}
 image_read("img/version_control/clone_01.png") %>%
@@ -453,7 +457,7 @@ image_read("img/version_control/clone_01.png") %>%
 ```
 
 Paste the URL of the GitHub project repository you 
-created and click the blue "CLONE" button:
+created and click the blue "CLONE" button (Figure \@ref(fig:clone-03)).
 
 ```{r clone-03, fig.cap = 'Prompt where the remote address (URL) corresponding to the location of the GitHub repository needs to be input in Jupyter.', fig.retina = 2}
 image_read("img/version_control/clone_03.png") %>%
@@ -461,7 +465,8 @@ image_read("img/version_control/clone_03.png") %>%
 ```
 
 On the file browser tab, you will now see a folder for your project's repository 
-(and inside it will be all the files that existed on GitHub):
+(and inside it will be all the files that existed on GitHub, 
+Figure \@ref(fig:clone-04)).
 
 ```{r clone-04, fig.cap = 'Cloned GitHub repositories can been seen and accessed via the Jupyter file browser.', fig.retina = 2}
 image_read("img/version_control/clone_04.png") %>%
@@ -482,47 +487,55 @@ Below we created and saved a new file (named `eda.ipynb`) that we would
 like to send back to the project repository on GitHub.
 To "add" this modified file to the staging area (*i.e.*, flag that this is a
 file whose changes we would like to commit), we click the Jupyter Git extension 
-icon on the far left-hand side of JupyterLab:
+icon on the far left-hand side of JupyterLab (Figure \@ref(fig:git-add-01)).
 
-```{r git-add-01}
+```{r git-add-01, fig.cap = 'Jupyter Git extension icon (circled in red).', fig.retina = 2}
 image_read("img/version_control/git_add_01.png")
 ```
 
 This opens the Jupyter Git graphical user interface pane, and then we
-click the plus sign beside the file that we want to "add". 
+click the plus sign (+) beside the file that we want to "add" 
+(Figure \@ref(fig:git-add-02)). 
 
-> **Note:** because this is the first change for this file that we want to add, it falls under the 
-"Untracked" heading. However, next time we edit this file and want to add the 
-changes we made, we will find it under the "Changed" heading.
+> **Note:** because this is the first change for this file that we want to add, 
+> it falls under the "Untracked" heading. 
+> However, next time we edit this file 
+> and want to add the changes we made, 
+> we will find it under the "Changed" heading.
 
-> **Note:** do not add the `eda-checkpoint.ipynb` file (sometimes called `.ipynb_checkpoints`). This file is 
-automatically created by Jupyter when you work on `eda.ipynb`. You generally do not add auto-generated files to Git repositories,
-only add the files you directly create and edit.
+> **Note:** do not add the `eda-checkpoint.ipynb` file 
+> (sometimes called `.ipynb_checkpoints`). 
+> This file is automatically created by Jupyter when you work on `eda.ipynb`. 
+> You generally do not add auto-generated files to Git repositories,
+> only add the files you directly create and edit.
 
-```{r git-add-02}
+```{r git-add-02, fig.cap = 'The plus sign (+) is used to add the `eda.ipynb` file to the staging area.', fig.retina = 2}
 image_read("img/version_control/git_add_02.png")
 ```
 
 This moves the file from the "Untracked" heading to the "Staged" heading, 
-flagging this file so that Git knows we want a snapshot of its current state as a commit.
-Now we are ready to "commit" the changes. Make sure to include a (clear and helpful!) message about what was changed
+flagging this file so that Git knows we want a snapshot of its current state 
+as a commit (Figure \@ref(fig:git-add-02)).
+Now we are ready to "commit" the changes. 
+Make sure to include a (clear and helpful!) message about what was changed
 so that your collaborators (and future you) know what happened in this commit. 
 
-```{r git-add-03}
+```{r git-add-03, fig.cap = 'Once added, the `eda.ipynb` file is visible in the staging area, labelled as "Staged" in the Jupyter Git extension tool.', fig.retina = 2}
 image_read("img/version_control/git_add_03.png")
 ```
 
 ### Making the commit
 
-To snapshot the changes with an associated commit message, we put the message in the text box 
-at the bottom of the Git pane and click on the blue "Commit" button. 
+To snapshot the changes with an associated commit message, 
+we put the message in the text box at the bottom of the Git pane 
+and click on the blue "Commit" button (Figure \@ref(fig:git-commit-01)). 
 It is highly recommended to write useful and meaningful messages about what 
 was changed. These commit messages, and the datetime stamp for a given 
-commit, are the primary means to navigate through the project's histry in the 
+commit, are the primary means to navigate through the project's history in the 
  event that we need to view or retrieve a past version of a file, or 
 revert our project to an earlier state.
 
-```{r git-commit-01}
+```{r git-commit-01, fig.cap = 'A commit message must be added into the Jupyter Git extension commit text box before the blue Commit button can be used to record the commit.', fig.retina = 2}
 image_read("img/version_control/git_commit_01.png")
 ```
 
@@ -530,42 +543,45 @@ image_read("img/version_control/git_commit_01.png")
 > enter your name and email. This only needs to be done once for each machine 
 > you use Git on.
 
-After "commiting" the file(s), you will see there there are 0 "Staged" files and we 
-are now ready to push our changes (and the attached commit message) to our 
-project repository on GitHub:
+After "committing" the file(s), you will see there there are 0 "Staged" files 
+and we are now ready to push our changes (and the attached commit message) 
+to our project repository on GitHub (Figure \@ref(fig:git-commit-01)).
 
-```{r git-commit-03}
+```{r git-commit-03, fig.cap = 'After recording a commit, the staging area should be empty.', fig.retina = 2}
 image_read("img/version_control/git_commit_03.png")
 ```
 
 ### Pushing the commits to GitHub
 
 To send the committed changes back to the project repository on 
-GitHub, we need to *push* them. To do this we click on 
-the cloud icon with the up arrow on the Jupyter Git tab:
+GitHub, we need to *push* them. 
+To do this we click on the cloud icon with the up arrow on the Jupyter Git tab 
+(Figure \@ref(fig:git-push-01)).
 
-```{r git-push-01}
+```{r git-push-01, fig.cap = 'The Jupyter Git extension push button (circled in red).', fig.retina = 2}
 image_read("img/version_control/git_push_01.png")
 ```
 
 We will then be prompted to enter our GitHub username 
-and password, and click the blue "OK" button:
+and password, and click the blue "OK" button (Figure \@ref(fig:git-push-02)).
 
-```{r git-push-02}
+```{r git-push-02, fig.cap = 'The Jupyter Git extension to enter Git credentials to authorize the push to the remote repository.', fig.retina = 2}
 image_read("img/version_control/git_push_02.png")
 ```
 
 If the files were successfully pushed to our project repository on 
-GitHub we will be given the success message shown 
-below. Click "Dismiss" to continue working in Jupyter.
+GitHub we will be given the success message shown below. 
+Click "Dismiss" to continue working in Jupyter (Figure \@ref(fig:git-push-03)).
 
-```{r git-push-03}
+```{r git-push-03, fig.cap = 'The Jupyter Git extension prompt that the push was successful.', fig.retina = 2}
 image_read("img/version_control/git_push_03.png")
 ```
 
-You will see that the changes now exist there!
+If you visit the remote repository on GitHub, 
+you will see that the changes now exist there via their web interface 
+(Figure \@ref(fig:git-push-04))!
 
-```{r git-push-04}
+```{r git-push-04, fig.cap = 'The GitHub web interface shows a preview of the commit message, and the time of the most recently pushed commit for each file.', fig.retina = 2}
 image_read("img/version_control/git_push_04.png") %>%
   image_crop("3584x2000")
 ```
