--- a/12-version_control.Rmd
+++ b/12-version_control.Rmd
@@ -593,38 +593,40 @@ image_read("img/version_control/git_push_04.png") %>%
 As mentioned earlier, GitHub allows you to control who has access to your 
 project. The default of both public and private projects are that only the 
 person who created the GitHub repository has permissions to create, edit and 
-delete files (*write access*). To give your collaborators write access to the projects, navigate to the "Settings" tab:
+delete files (*write access*). To give your collaborators write access to the 
+projects, navigate to the "Settings" tab (Figure \@ref(fig:add-collab-01)).
 
-```{r add-collab-01}
+```{r add-collab-01, fig.cap = 'The "Settings" tab on the GitHub web interface.', fig.retina = 2}
 image_read("img/version_control/add_collab_01.png") %>%
   image_crop("3584x1250")
 ```
 
-Then click "Manage access":
+Then click "Manage access" (Figure \@ref(fig:add-collab-02)).
 
-```{r add-collab-02}
+```{r add-collab-02, fig.cap = 'The "Manage access" tab on the GitHub web interface.', fig.retina = 2}
 image_read("img/version_control/add_collab_02.png") %>%
   image_crop("3584x1200")
 ```
 
-Click the green "Invite a collaborator" button:
+Click the green "Invite a collaborator" button 
+(Figure \@ref(fig:add-collab-03)).
 
-```{r add-collab-03}
+```{r add-collab-03, fig.cap = 'The "Invite a collaborator" button on the GitHub web interface.', fig.retina = 2}
 image_read("img/version_control/add_collab_03.png") %>%
   image_crop("3584x2200")
 ```
 
-Type in the collaborator's GitHub username and select their name when it 
-appears:
+Type in the collaborator's GitHub username or email, 
+and select their name when it appears (Figure \@ref(fig:add-collab-04)).
 
-```{r add-collab-04}
+```{r add-collab-04, fig.cap = "The text box where a collaborator's GitHub username or email can be entered.", fig.retina = 2}
 image_read("img/version_control/add_collab_04.png") %>%
   image_crop("3584x1250")
 ```
 
-Finally, click the green "Add <COLLABORATORS_GITHUB_USER_NAME> to this repository" button:
+Finally, click the green "Add <COLLABORATORS_GITHUB_USER_NAME> to this repository" button (Figure \@ref(fig:add-collab-05)).
 
-```{r add-collab-05}
+```{r add-collab-05, fig.cap = 'The confirmation button for adding a collaborator to a repository on the GitHub web interface.', fig.retina = 2}
 image_read("img/version_control/add_collab_05.png") %>%
   image_crop("3584x1250")
 ```
@@ -707,10 +709,12 @@ image_read("img/version_control/merge_conflict_03.png") %>%
 ### Handling merge conflicts
 
 To fix the merge conflict we need to open the file that had the merge 
-conflict in a plain text editor and look for special marks that Git puts in the
-file to tell you where the merge conflict occurred. 
+conflict in a plain text editor 
+and look for special marks that Git puts in the file 
+to tell you where the merge conflict occurred 
+(Figure \@ref(fig:merge-conflict-04)). 
 
-```{r merge-conflict-04}
+```{r merge-conflict-04, fig.cap = 'How to open a Jupyter notebook as a plain text file view in Jupyter.', fig.retina = 2}
 image_read("img/version_control/merge_conflict_04.png") %>%
   image_crop("3584x1200")
 ```
@@ -719,17 +723,20 @@ The beginning of the merge
 conflict is preceded by `<<<<<<< HEAD` and the end of the merge conflict is 
 marked by `>>>>>>>`. Between these markings, Git also inserts a separator 
 (`=======`). The version of the change before the separator is your change, and 
-the version that follows the separator was the change that existed on GitHub.
+the version that follows the separator was the change that existed on GitHub
+(Figure \@ref(fig:merge-conflict-05)).
 
-```{r merge-conflict-05}
+```{r merge-conflict-05, fig.cap = 'Merge conflict identifiers (highlighted in red).', fig.retina = 2}
 image_read("img/version_control/merge_conflict_05.png") %>%
   image_crop("3584x1200")
 ```
 
-Once you have decided which version of the change (or what combination!) to keep, you need to use the 
-plain text editor to remove the special marks that Git added.  
+Once you have decided which version of the change 
+(or what combination!) to keep, 
+you need to use the plain text editor 
+to remove the special marks that Git added (Figure \@ref(fig:merge-conflict-06)).  
 
-```{r merge-conflict-06}
+```{r merge-conflict-06, fig.cap = 'File where a merge conflict has been resolved.', fig.retina = 2}
 image_read("img/version_control/merge_conflict_06.png") %>%
   image_crop("3584x1200")
 ```
@@ -758,41 +765,43 @@ notifications when a new issue is created or a new post is made in an issue
 thread. Replying to issues from email is also possible. Given all of these advantages,
  we highly recommend the use of issues for project-related communication.
 
-To open a GitHub issue, first click on the "Issues" tab:
+To open a GitHub issue, 
+first click on the "Issues" tab (Figure \@ref(fig:issue-01)).
 
-```{r issue-01}
+```{r issue-01, fig.cap = 'The "Issues" tab on the GitHub web interface.', fig.retina = 2}
 image_read("img/version_control/issue_01.png") %>%
   image_crop("3584x1250")
 ```
 
-Next click the "New issue" button:
+Next click the "New issue" button (Figure \@ref(fig:issue-02)).
 
-```{r issue-02}
+```{r issue-02, fig.cap = 'The "New issues" button on the GitHub web interface.', fig.retina = 2}
 image_read("img/version_control/issue_02.png") %>%
   image_crop("3584x1250")
 ```
 
 Add an issue title (which acts like an email subject line), and then put the 
 body of the message in the larger text box. Finally click "Submit new issue"
-to post the issue to share with others:
+to post the issue to share with others (Figure \@ref(fig:issue-03)).
 
-```{r issue-03}
+```{r issue-03, fig.cap = 'Dialog boxes and submission button for creating new GitHub issues.', fig.retina = 2}
 image_read("img/version_control/issue_03.png") %>%
   image_crop("3584x2200")
 ```
 
 You can reply to an issue that someone opened by adding your written response to
-the large text box and clicking comment:
+the large text box and clicking comment (Figure \@ref(fig:issue-04)).
 
-```{r issue-04}
+```{r issue-04, fig.cap = 'Dialog box for replying to GitHub issues.', fig.retina = 2}
 image_read("img/version_control/issue_04.png") %>%
   image_crop("3584x2000")
 ```
 
-When a conversation is resolved, you can click "Close issue". The closed issue 
-can be later viewed be clicking the "Closed" header link in the "Issue" tab:
+When a conversation is resolved, you can click "Close issue". 
+The closed issue can be later viewed be clicking the "Closed" header link 
+in the "Issue" tab (Figure \@ref(fig:issue-06)).
 
-```{r issue-06}
+```{r issue-06, fig.cap = 'The "Closed" issues tab on the GitHub web interface.', fig.retina = 2}
 image_read("img/version_control/issue_06.png") %>%
   image_crop("3584x1900")
 ```
