removed jupyter content from moving to your own machine chapter

--- a/index.Rmd
+++ b/index.Rmd
@@ -172,9 +172,9 @@ need to be surrounded by quotes.
 
 There are certain conventions for naming objects in R. 
 Object names should consist of letters, numbers and underscores `_` to separate words within a name.
-It would help if you also tried to give your objects meaningful names.
+You should also try to give your objects meaningful names.
 For instance, you *can* name a plot `x`. 
-However, using more meaningful terms, such as `canlang_plot`, will help you remember what each name represents. 
+However, using more meaningful terms, such as `canlang_plot`, will help you remember what each name in your code represents. 
 We recommend following the Tidyverse naming conventions outlined in the [Tidyverse Style Guide](https://principles.tidyverse.org/names-attribute.html#universal-names) [@tidyversestyleguide]. 
 
 Let's now use the assignment symbol to give the name `can_lang` 
