changed bullet points of learning objectives in wrangling chapter, added reference, added intro paragraph about language to index

--- a/references.bib
+++ b/references.bib
@@ -117,6 +117,7 @@
   }
 
 @online{tidyversestyleguide,
+  year = 2020,
   author = {Hadley Wickham},
   title = {The tidyverse style guide},
   url = {https://style.tidyverse.org/}
