--- a/index.Rmd
+++ b/index.Rmd
@@ -43,13 +43,24 @@ can_lang <- readr::read_csv("https://github.com/ttimbers/canlang/raw/master/inst
 # R and the tidyverse
 ## Overview
 
-This textbook aims to be an approachable introduction to the world of data science. In this book, we define *data science* as the study and development of reproducible, auditable processes to obtain value (i.e., insight) from data. At a high level, in this book, readers will learn how to 
+This textbook aims to be an approachable introduction to the world of data science. 
+In this book, we define *data science* as the study and development of reproducible, 
+auditable processes to obtain value (i.e., insight) from data. 
+At a high level, in this book, readers will learn how to 
 
 (1) use reproducible tools to do data analysis and 
 (2) identify and solve common problems in data science. 
 
-The book is structured, so learners spend the first four chapters learning how to use the R programming language to load, wrangle, clean, and visualize data while answering descriptive and exploratory data analysis questions. The next six chapters illustrate how to answer
-predictive, exploratory and inferential data analysis questions with common methods in data science, including classification, regression, clustering and estimation. In the final chapters (\@ref(getting-started-with-jupyter) - \@ref(setting-up-your-own-computer)), we discuss how to use Jupyter to edit and write R code (a programming language for data analysis [@Rlanguage]), how to use version control for collaboration, and how to install and configure the software needed for data science on your own computer. Readers may want to refer to these chapters earlier as they start exploring the examples and exercises in this book. Figure \@ref(fig:img-chapter-overview) summarizes a data science pipeline and what you will learn in each chapter of this book.
+The book is structured, so learners spend the first four chapters learning how 
+to use the R programming language [@Rlanguage] to load, wrangle, clean, and visualize data
+while answering descriptive and exploratory data analysis questions. The next
+six chapters illustrate how to answer
+predictive, exploratory and inferential data analysis questions with common methods
+in data science, including classification, regression, clustering and estimation.
+In the final chapters (\@ref(getting-started-with-jupyter) - \@ref(setting-up-your-own-computer)), 
+we discuss how to use Jupyter to edit and write R code, how to use version control for collaboration, and how to install and configure the software needed for data science on your own computer. Readers 
+may want to refer to these chapters earlier as they start exploring the examples 
+and exercises in this book. Figure \@ref(fig:img-chapter-overview) summarizes a data science pipeline and what you will learn in each chapter of this book.
 
 ```{r img-chapter-overview, echo = FALSE, message = FALSE, warning = FALSE, fig.cap = "Where are we going?", out.width="1050", fig.retina = 2}
 knitr::include_graphics("img/chapter_overview.jpeg")
@@ -92,8 +103,45 @@ By the end of the chapter, students will be able to:
     - `read_csv` 
     - `select`
     - `filter`
+    - `slice`
     - `ggplot`
     - `aes`
+
+## Ask a question 
+
+Before the arrival of European colonists, Indigenous peoples lived in Canada with their own cultures and many different languages. Many Aboriginal languages are unique to Canada and not spoken anywhere else in the world. (https://www150.statcan.gc.ca/n1/pub/11-630-x/11-630-x2018001-eng.htm) Sadly, colonization has led to the loss of many of these languages. For instance, generations of children were not allowed to speak their mother tongue (the first language an individual learns in childhood) in Canadian residential schools. Colonizers renamed places they had "discovered". Acts such as these have significantly harmed the continuity of Aboriginal languages in Canada. https://opentextbc.ca/indigenizationfoundations/chapter/43/#:~:text=In%20Canada%2C%20colonization%20occurred%20when,not%20favour%20the%20Indigenous%20Peoples.
+
+> To learn more, see this resource: 
+
+In the 2016 census, more than 70 Aboriginal languages were reported as being spoken. Suppose we want to ask the question:
+
+*What ten Aboriginal languages were most often reported in 2016 as mother tongues in Canada and how many people speak each of them?* 
+
+This question is an example of a descriptive question since we are summarizing characteristics of a data set without interpretation. Now that we have asked our question, the next step is to collect or identify the data set you will be working with. 
+
+We will be working with a data set originally from [{canlang} R data package](https://ttimbers.github.io/canlang/) [@timbers2020canlang], which has language data collected in the 2016 Canadian census [@cancensus2016]. 
+
+```{bash, echo=FALSE, comment=NA}
+head -n 10 data/can_lang.csv
+```
+
+
+
+In this data frame there are 214 rows rows (corresponding to the 214 languages recorded on the 2016 Canadian census)
+and 6 columns: 
+
+1. `category`: Higher level language category (describing whether the language is an Official Canadian language, an Aboriginal language, or a Non-Official and Non-Aboriginal language).
+2. `language`: Language queried about on the Canadian Census.
+3. `mother_tongue`: Total count of Canadians from the Census who reported the language as their mother tongue. Mother tongue is generally defined as the language someone was exposed to since birth.
+4. `most_at_home`: Total count of Canadians from the Census who reported the language as spoken most often at home.
+5. `most_at_work`: Total count of Canadians from the Census who reported the language as used most often at work for the population.
+6. `lang_known`: Total count of Canadians from the Census who reported knowledge of language for the population in private households.
+
+
+> **A note about the *data* in data science!** 
+> Data science cannot be done without a deep understanding of the data and problem domain. In this book, we have simplified the data sets used in our examples to concentrate on concepts. In real life, we cannot and should not do data science without a domain expert. Alternatively, it is common to practice data science in your domain of expertise! Remember that when we work with data, it is essential to think about *how* the data were collected, which affects the conclusions we can draw. If your data are biased, then your results will be biased!
+
+Now we just need to use R to load the data, do some wrangling and visualize the data to answer this question!
 
 ## Loading a spreadsheet-like data set
 
@@ -138,7 +186,7 @@ through loading the `tidyverse` package [@wickham2019tidverse] (more on this lat
 After loading the `tidyverse` package, we can call the `read_csv` function and 
 pass it a single argument: the name of the file, `"can_lang.csv"`. We have to put quotes around file names and other letters and words that we use in our code to distinguish it from the special words that make up the R programming language.  The file's name is the only argument we need to provide because our file satisfies everything else the `read_csv` function expects in the default use-case (which we just discussed). Later in the course, we'll learn more about dealing with more complicated files where the default arguments are not appropriate, for example, files that use spaces or tabs to separate the columns instead of commas.
 
-```{r load_state_property_data, warning=FALSE, message=FALSE}
+```{r load_can_lang_data, warning=FALSE, message=FALSE}
 library(tidyverse)
 read_csv("data/can_lang.csv")
 ```
@@ -202,28 +250,13 @@ can_lang
 
 Now, we are going to learn how to obtain subsets of data from a data frame in R using two other `tidyverse` functions: `select` and `filter`. 
 The `select` function allows you to create a subset of the columns of a data frame, while the `filter` function allows you to obtain a subset of the rows with specific values.
-
-Before we start using `select` and `filter`, let's take a look at the language data collected in the 2016 Canadian census again to familiarize ourselves with it. We will do this by printing the data we loaded earlier in the chapter to the screen. 
+ let's take a look at the language data collected in the 2016 Canadian census again to familiarize ourselves with it. We will do this by printing the data we loaded earlier in the chapter to the screen. 
 
 
 ```{r print_data_again}
 can_lang
 ```
 
-
-In this data frame there are 214 rows rows (corresponding to the 214 languages recorded on the 2016 Canadian census)
-and 6 columns: 
-
-1. `category`: Higher level language category (describing whether the language is an Official Canadian language, an Aboriginal language, or a Non-Official and Non-Aboriginal language).
-2. `language`: Language queried about on the Canadian Census.
-3. `mother_tongue`: Total count of Canadians from the Census who reported the language as their mother tongue. Mother tongue is generally defined as the language someone was exposed to since birth.
-4. `most_at_home`: Total count of Canadians from the Census who reported the language as spoken most often at home.
-5. `most_at_work`: Total count of Canadians from the Census who reported the language as used most often at work for the population.
-6. `lang_known`: Total count of Canadians from the Census who reported knowledge of language for the population in private households.
-
-
-> **A note about the *data* in data science!** 
-> Data science cannot be done without a deep understanding of the data and problem domain. In this book, we have simplified the data sets used in our examples to concentrate on concepts. In real life, we cannot and should not do data science without a domain expert. Alternatively, it is common to practice data science in your domain of expertise! Remember that when we work with data, it is essential to think about *how* the data were collected, which affects the conclusions we can draw. If your data are biased, then your results will be biased!
 
 ### Using `select` to a single column
 
