minor change to writing

--- a/index.Rmd
+++ b/index.Rmd
@@ -119,7 +119,7 @@ In the 2016 census, more than 70 Aboriginal languages were reported as being spo
 
 This question is an example of a descriptive question since we are summarizing characteristics of a data set without interpretation. Now that we have asked our question, the next step is to collect or identify the data set you will be working with. 
 
-We will be working with a data set originally from [{canlang} R data package](https://ttimbers.github.io/canlang/) [@timbers2020canlang], which has language data collected in the 2016 Canadian census [@cancensus2016]. 
+In this chapter, we will be working with a data set originally from [{canlang} R data package](https://ttimbers.github.io/canlang/) [@timbers2020canlang], which has language data collected in the 2016 Canadian census [@cancensus2016]. 
 
 ```{bash, echo=FALSE, comment=NA}
 head -n 10 data/can_lang.csv
